Fix arrows z-index

--- a/static/history-carousel.css
+++ b/static/history-carousel.css
@@ -14,6 +14,7 @@
 
 #prev-button, #next-button {
   position: absolute;
+  z-index: 10;
   top: 50%;
   cursor: pointer;
   user-select: none;
